tests/algorithms/x/Java/digital_image_processing/rotation/rotation.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden285_rotation2164633404/001/Main.java:73: error: incompatible types: Object[][] cannot be converted to double[][]
        double[][] inv_1 = ((double[][])(mat_inverse3(((double[][])(src)))));
                                                                   ^
1 error
